--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bulma.min.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/icons.css" />
     <link rel="stylesheet" href="%PUBLIC_URL%/css/core.css" />
     <!--
