Whole template converted into ReactJS

--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,9 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+    <div id="preloader">
+      <div id="status"></div>
+    </div>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -39,5 +42,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <div id="backtotop">
+      <a href="#"></a>
+    </div>
+
+    <script src="%PUBLIC_URL%/scripts/chargebee.js" data-cb-site="run9"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    <script src="http://run9io-prod.apps.run9.io/js/jquery-panelslider/jquery.panelslider.min.js"></script>
+    <script src="http://run9io-prod.apps.run9.io/js/fresh-b6aae59f.js"></script>
+    <script data-no-instant>
+        document.write('<script src="/livereload.js?port=1313&mindelay=10"></' + 'script>')
+    </script>
   </body>
 </html>
